fix(env): remove local env and add container name

--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,4 @@
-ENV=local
+CONTAINER_NAME=test_cms
 WORDPRESS_PORT=8089
 WORDPRESS_URL=http://localhost:8089
 MYSQL_DATABASE=wordpress
@@ -6,5 +6,5 @@ MYSQL_USER=wpuser
 MYSQL_PASSWORD=secret
 MYSQL_ROOT_PASSWORD=rootsecret
 
-WP_USERNAME = 
-WP_PASSWORD = 
+WP_USERNAME=testing
+WP_PASSWORD=testing1234
