--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,10 @@
-version: '3.8'
+version: "3.8"
 
 services:
   wordpress:
+    container_name: ${CONTAINER_NAME}-wp
+    depends_on:
+      - db
     image: wordpress:latest
     ports:
       - "${WORDPRESS_PORT}:80"
@@ -15,6 +18,7 @@ services:
     restart: always
 
   db:
+    container_name: ${CONTAINER_NAME}-db
     image: mariadb:10.5
     environment:
       MYSQL_DATABASE: ${MYSQL_DATABASE}
