--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     container_name: ${CONTAINER_NAME}-wp
     depends_on:
       - db
-    image: wordpress:latest
+    image: wordpress:php8.3
     ports:
       - "${WORDPRESS_PORT}:80"
     environment:
